--- a/package.json
+++ b/package.json
@@ -2,6 +2,16 @@
   "name": "test-module-condition",
   "version": "1.0.0",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "webpack": "cd workspace && webpack --config webpack.config.js",
+    "rollup": "cd workspace && rollup --config",
+    "esbuild": "cd workspace && node esbuild.config.js"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "esbuild": "^0.23.1",
+    "rollup": "^4.21.2",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   }
 }
